# json-eval

./: .clang-format  CMakeLists.txt  Doxyfile  license  readme.md
.github/workflows/: html.yml  tests.yml
include/: custom_json.hpp  json.hpp  parser.hpp  reference.hpp
src/: json.cpp  main.cpp  parser.cpp  raw_json.cpp  reference.cpp
tests/: json_tests.cpp  main.cpp  parse_tests.cpp  path_tests.cpp
tests/data/: de.json  pretty_troma.json  troma_imdb.json
